# gcp_test_repo

./: .gitignore  README.md  hello.py  islam.py  pyproject.toml  requirements.txt  run_demo.py
.devcontainer/: Dockerfile  devcontainer.json
scripts/: fake-codespace-setup.sh
src/fake_codespace/: __init__.py  app.py  auth.py  session.py  utils.py
tests/: test_app.py  test_auth.py  test_session.py  test_utils.py
